fix(style): fix the wrong height of search, order and user component

--- a/src/Component/order/order.less
+++ b/src/Component/order/order.less
@@ -5,10 +5,11 @@ body {
   background-color: #F5F5F5;
 }
 #order {
-  width: 100%;
   .order-container {
-    margin-top: 1.95rem;
-    margin-bottom: 2.2rem;
+    position: absolute;
+    top: 1.95rem;
+    left: 0;
+    right: 0;
     .order-item {
       margin-bottom: .5rem;
       background: #FFFFFF;
