--- a/src/Component/search/search.less
+++ b/src/Component/search/search.less
@@ -10,8 +10,10 @@ body {
 #search {
   .search-container {
     background-color: #FFFFFF;
-    margin-top: 1.95rem;
-    margin-bottom: 2.2rem;
+    position: absolute;
+    top: 1.95rem;
+    left: 0;
+    right: 0;
     .search-input {
       padding: 0.5rem;
       display: flex;
