--- a/src/Component/user/user.less
+++ b/src/Component/user/user.less
@@ -6,8 +6,10 @@ body {
 }
 #user {
   .user-container {
-    margin-top: 1.95rem;
-    margin-bottom: 2.2rem;
+    position: absolute;
+    top: 1.95rem;
+    left: 0;
+    right: 0;
     .account-mes {
       background-color: #3190E8;
       padding: .666667rem .6rem;
